--- a/you-go-healthplan/package.json
+++ b/you-go-healthplan/package.json
@@ -16,6 +16,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-sticky": "^6.0.3",
     "rsuite": "^4.8.1"
   },
   "scripts": {
