--- a/you-go-healthplan/package.json
+++ b/you-go-healthplan/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,7 +12,9 @@
     "bootstrap": "^4.5.2",
     "emailjs-com": "^2.6.3",
     "google-map-react": "^2.1.3",
+    "rc-banner-anim": "^2.4.4",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
     "react-bootstrap": "^1.3.0",
     "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
