--- a/you-go-healthplan/package.json
+++ b/you-go-healthplan/package.json
@@ -22,8 +22,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-share": "^4.3.0",
+    "react-slick": "^0.27.11",
     "react-sticky": "^6.0.3",
-    "rsuite": "^4.8.1"
+    "rsuite": "^4.8.1",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
