--- a/you-go-healthplan/package.json
+++ b/you-go-healthplan/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.3.0",
     "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
+    "react-faq-component": "^1.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
